bad/method_defined_two_times.example_compiler_output
ERROR
[1mbad/method_defined_two_times.lat:5:2: [1;31merror: [0;1mclass cannot contain two methods with the same name[m
	int foo(int x) { return x; }
	[1;32m^[m
[1mbad/method_defined_two_times.lat:3:2: [1;34mnote: [0;1mprevious definition is here[m
	void foo() {}
	[1;32m^[m
